feat: getById endpoints update on swagger, meal controllers refactor and new enpoint getMealById
