# backend/src/api/meal/service/IMealService.ts
@@ -2,6 +2,7 @@ import { IMeal } from "../model/Meal";
 
 export interface IMealService {
   getMeals(): Promise<IMeal[]>;
+  getMealById(id: string): Promise<IMeal>;
   postMeal(mealParams: any): Promise<IMeal>;
   putMeal(id: string, mealParams: any): Promise<IMeal>;
 }
